@@ -1,3 +1,8 @@
+Thu, 03 Aug 2006 21:02:12 +0200 <informancer@web.de>
+	* libgpodder.py: implemented register/unregister mechanism for
+	  backend 
+	* test_gpodder_backend.py: docstringed tests.
+
 Thu, 03 Aug 2006 20:03:23 +0200 <informancer@web.de>
 	* Makefile: Added unittest target
 	* Fixed path bug when starting backend
